agregada estilização do header partindo do mibile first

--- a/main.css
+++ b/main.css
@@ -1,5 +1,16 @@
+@import url("styles/reset.css");
+@import url("./styles/header.css");
+
 body {
     background-color: #F5F5F5;
     line-height: 1;
     font-family: 'Raleway';
+	padding: 0 20px;
+	row-gap: 50px;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
