--- a/styles/reset.css
+++ b/styles/reset.css
@@ -13,7 +13,8 @@ ol, ul,li {
     list-style: none;
 }
 a{
-    text-decoration: none; 
+    text-decoration: none;
+    color: inherit;
 }
 
 textarea:focus, input:focus, select:focus {
