--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,4 +1,5 @@
 .profile {
+    padding: 0 30px;
     display: flex;
     flex-direction: column;
 }
@@ -54,7 +55,9 @@
 }
 
 @media (min-width: 1024px) {
-    
+    .profile {
+        width: 100%;
+    }
     .profile-title {
         font-size: 52px;
         font-weight: 700;
