criado e agregados estilos em hobbies.css

--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 @import url("./styles/profile.css");
 @import url("styles/about.css");
 @import url("styles/skills.css");
+@import url("styles/hobbies.css");
 
 body {
     background-color: #F5F5F5;
