criados e agregados estilos em education.css

--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 @import url("styles/about.css");
 @import url("styles/skills.css");
 @import url("styles/hobbies.css");
+@import url("styles/education.css");
 
 body {
     background-color: #F5F5F5;
