criado e estilizado experience.css

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 @import url("styles/skills.css");
 @import url("styles/hobbies.css");
 @import url("styles/education.css");
+@import url("styles/experience.css");
 
 body {
     background-color: #F5F5F5;
