criados e agregados estilos em contato.css

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 @import url("styles/hobbies.css");
 @import url("styles/education.css");
 @import url("styles/experience.css");
+@import url("styles/contato.css");
 
 body {
     background-color: #F5F5F5;
