--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@
 @import url("styles/education.css");
 @import url("styles/experience.css");
 @import url("styles/contato.css");
+@import url("styles/footer.css");
 
 body {
     background-color: #F5F5F5;
